--- a/css/dark-theme/flight-details-dark.css
+++ b/css/dark-theme/flight-details-dark.css
@@ -35,7 +35,13 @@
 body {
       font-family: "Plus Jakarta Sans", sans-serif;
       background-color: var(--on-grey2);
+      overflow-x: hidden;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 
 /* header container (main/center) */
 .header {
