--- a/css/dark-theme/search-flights-dark.css
+++ b/css/dark-theme/search-flights-dark.css
@@ -18,7 +18,13 @@
 
 body {
     background-color: var(--on-grey2);
+    overflow-x: hidden;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 
 /* header container (main/center) */
 .header {
