--- a/css/login_style.css
+++ b/css/login_style.css
@@ -15,6 +15,11 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     padding: 10px;
+    overflow: hidden;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 form {
